--- a/DSV/a/DSV_Toni.tex
+++ b/DSV/a/DSV_Toni.tex
@@ -100,7 +100,7 @@ $[n]_{modN}=n-N \lfloor \frac{n}{N} \rfloor$
 \cline{1-3}
         gerade Symmetrie & $x_g(k)=\frac{x(k)+\tilde{x}(-k)}{2}$ & $X_g(n)=\frac{X(n)+X(-n)}{2}$ \\
 \cline{1-3}
-        ungerade Symmetrie & $x_u(k)=\frac{x(k)-\tilde{x}(-k)}{2}$ & $X_u(n)=\frac{X(n)-X(-n)}{2}$ \\
+        ungerade Symmetrie & $x_u(k)=\frac{x(k)-\tilde{x}(-k)}{2}$ & $X_u(n)=\frac{X(n)-X(-n)}{2j}$ \\
 \cline{1-3}
 \end{tabular}
 \end{center}
@@ -209,8 +209,8 @@ $[n]_{modN}=n-N \lfloor \frac{n}{N} \rfloor$
   \end{mdframed}
   \begin{mdframed}[style=exercise]
     \begin{align}
-        X_1(n) = \frac{1}{2}(Y(n)+Y^*(-n))\\
-        X_2(n) = \frac{1}{2j}(Y(n)-Y^*(n))
+        X_1(n) = \frac{1}{2}(Y(n)+Y^*([-n]_{modN}))\\
+        X_2(n) = \frac{1}{2j}(Y(n)-Y^*([-n]_{modN}))
     \end{align}
   \end{mdframed}
 
@@ -233,11 +233,28 @@ Gaußverteilung (Normalverteilung)
         f_x(\alpha) = \frac{1}{\sigma_x \cdot \sqrt{2\pi}} \cdot e^{-\frac{1}{2} \cdot \left( \frac{\alpha - \mu_x}{\sigma_x}\right)^2}
     \end{align}
   \end{mdframed}
-\subsection{Erwartungswert, Varianz}
+\subsection{Erwartungswert $\mu_x$, Varianz $\sigma_x^2$}
+Formeln gelten nur für \textbf{stationäre} Zufallsvariablen bzw stochastische Prozesse
   \begin{mdframed}[style=exercise]
     \begin{align}
         \mu_x = E[x] = \displaystyle\int_{-\infty}^{\infty} \alpha f_x(\alpha) d\alpha = \displaystyle\sum_{\nu}^{} a_\nu P_\nu\\
-        \sigma_x^2 = E[(x-\mu)^2] = E[x]-\mu^2  = \displaystyle\int_{-\infty}^{\infty} (\alpha-\mu_x)^2 \ f_x(\alpha) d\alpha
+        \sigma_x^2 = E[(x-\mu_x)^2] = E[x^2]-\mu_x^2  = \displaystyle\int_{-\infty}^{\infty} (\alpha-\mu_x)^2 \ f_x(\alpha) d\alpha
+    \end{align}
+  \end{mdframed}
+Für 2 Stoch. unabh. Variablen $f_x(\alpha)$ und $f_y(\beta)$ gilt
+  \begin{mdframed}[style=exercise]
+    \begin{align}
+        f_{xy}(\alpha,\beta) = f_x(\alpha)\cdot f_y(\beta)\\
+        \mu_{xy} = \mu_{x} + \mu_{y}\\
+        \sigma_{xy}^2 = \sigma_{x}^2 + \sigma_{y}^2
+    \end{align}
+  \end{mdframed}
+Für ein deterministisches Signal $x(k)$ gilt $\sigma_x^2=Var(x)=0$
+Falls $y(k) = x_1(k)x_2(k)$, dann gilt
+
+  \begin{mdframed}[style=exercise]
+    \begin{align}
+        \sigma_y^2 = (\sigma_{x_1}^2+\mu_{x_1}^2)(\sigma_{x_2}^2+\mu_{x_2}^2) 
     \end{align}
   \end{mdframed}
 \subsection{Stationärer Stochastischer Prozess}
@@ -274,6 +291,7 @@ Definition \textbf{schwache Stationarität}
     \item $\varphi_{xx}(0) \geq \abs{\varphi_{xx}(\lambda)}$ (max(Autokorr.) im Ursprung)
     \item $\varphi_{xx}(0) =E[\abs{x(k)}^2]$ (= mittlere Leistung)
     \item $\varphi_{xx}(0) = \sigma_x^2 + \abs{\mu_x}^2$
+    \item aus Stationarität folgt \textbf{Unkorreliertheit}
 \end{itemize}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Ergodizität %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -285,13 +303,13 @@ Scharmittelwert und Zeitmittelwert sind aquivalent\\
 \cline{1-3}
         & Zeitmittelwert(Schätzung) & Scharmittelwert \\
 \cline{1-3}
-        lin. Mittelwert $\mu_x$ & $\mu_x = \frac{1}{N}\sum_{k=0}^{N-1}x(k)$ & E[x(k)] \\
+        lin. Mittelw $\mu_x$ & $\mu_x = \frac{1}{N}\sum_{k=0}^{N-1}x(k)$ & E[x(k)] \\
 \cline{1-3}
         Varianz $\sigma_x^2$ & $\sigma_x^2 = \frac{1}{N}\sum_{k=0}^{N-1}\abs{x(k)-\mu_x}^2$ & $E[\abs{x(k)-\mu_x}^2]$ \\
 \cline{1-3}
-        Autokorr. $\varphi_{xx}(\lambda)$ & $\frac{1}{N}\sum_{k=0}^{N-1} x^*(k)x(k+\lambda) $ & $E[x^*(k)x(k+\lambda)]$ \\
+        AKorr. $\varphi_{xx}(\lambda)$ & $\frac{1}{N}\sum_{k=0}^{N-1} x^*(k)x(k+\lambda) $ & $E[x^*(k)x(k+\lambda)]$ \\
 \cline{1-3}
-        Kreuzkorr. $\varphi_{xy}(\lambda)$ & $\varphi_{xy}(\lambda)=\frac{1}{N}\sum_{k=0}^{N-1} x^*(k)y(k+\lambda) $ & $E[x^*(k)y(k+\lambda)]$ \\
+        KKorr. $\varphi_{xy}(\lambda)$ & $\varphi_{xy}(\lambda)=\frac{1}{N}\sum_{k=0}^{N-1} x^*(k)y(k+\lambda) $ & $E[x^*(k)y(k+\lambda)]$ \\
 \cline{1-3}
 \end{tabular}
 \end{center}
@@ -303,6 +321,7 @@ LDS = DFT der Stochastischen Prozesse \\
 Autoleistungsdichtespektrum  $\phi_{xx}(e^{j\Omega})$ und Kreuzeistungsdichtespektrum $\phi_{xy}(e^{j\Omega})$
   \begin{mdframed}[style=exercise]
     \begin{align}
+        \phi_{xx}(e^{j\Omega}) = \mathcal{F}\{ \varphi_{xx}(\lambda)\} \\
         \phi_{xx}(e^{j\Omega}) = \sum_{\lambda=-\infty}^{\infty} \varphi_{xx}(\lambda) e^{-j\Omega\lambda} \\
         \varphi_{xx}(\lambda) = \frac{1}{2\pi} \displaystyle\int_{-\pi}^{\pi} \phi_{xx}(e^{j\Omega})e^{j\Omega\lambda}d\Omega \\
         \phi_{xy}(e^{j\Omega}) = \sum_{\lambda=-\infty}^{\infty} \varphi_{xy}(\lambda) e^{-j\Omega\lambda} \\
@@ -315,7 +334,7 @@ Mittlere Leistung $\varphi_{xx}(0)$
         \varphi_{xx}(0) = \frac{1}{2\pi} \displaystyle\int_{-\pi}^{\pi} \phi_{xx}(e^{j\Omega})d\Omega  = \frac{\phi_{xx}(e^{j\Omega})}{2\pi}
     \end{align}
   \end{mdframed}
-Weißes Rauschen (Mittelwertfrei)
+Weißes Rauschen (Mittelwertfrei) 
   \begin{mdframed}[style=exercise]
     \begin{align}
         \phi_{xx}(e^{j\Omega}) = \phi_0\\
