Fehler ausgebessert bis einschl. 4.5 Kammfilter

--- a/DSV/a/DSV_Toni.tex
+++ b/DSV/a/DSV_Toni.tex
@@ -604,7 +604,7 @@ p = Ordnung, (K) = Kerbenbildend, (R) = Resonanzbildend
   \begin{mdframed}[style=exercise]
     \begin{align}
         z_{\infty n}^{(K)} = r_\infty e^{j\frac{2\pi n}{p}} = r_\infty z_{0n}^{(K)} \ \ n\in[0,p-1]\\
-        z_{\infty n}^{(R)} = r_\infty e^{j\frac{2\pi n}{p}} = r_\infty z_{0n}^{(R)} \ \ n\in[0,p-1]
+        z_{\infty n}^{(R)} = r_\infty e^{j\frac{(\pi + 2\pi n)}{p}} = r_\infty z_{0n}^{(R)} \ \ n\in[0,p-1]
     \end{align}
   \end{mdframed}
 \subsubsection{Kerbenbildend Kammfilter $H_{(K)}(z)$}
